<?xml version="1.0"?>
<package format="3">
  <name>one_launch</name>
  <version>0.1.0</version>
  <description>The one_launch package</description>

  <maintainer email="mfc@leodrive.ai">M. Fatih Cırıt</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
